/*
 * Copyright 2018 Anoop Vijayan Maniankara
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

 syntax = "proto3";

package gcp;

service Gcp {

    // transfer file from local (client) to remote (server)
    rpc CopyTo(stream CopyFile) returns (TransferPath) {};

    // transfer file from remote (server) to local (client)
    rpc CopyFrom(TransferPath) returns (stream CopyFile) {};

}

message CopyFile {
    oneof chunktype {
        string file_path = 1;    
        bytes file_data = 2;
    }
}

message TransferPath {
    string path = 1;
}